-
Bug
-
Resolution: Done
-
P0: Blocker
-
None
-
5.14.0 Alpha
-
None
https://codereview.qt-project.org/c/qt/qt5/+/267105 Update submodules on 'dev' in qt5 - PS5
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1562311110
agent:2019/07/05 07:42:32 build.go:207: /Applications/Xcode10.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -c -pipe -stdlib=libc++ -DQT_MAPBOXGL_STATIC -O2 -std=c++1y -fapplication-extension -arch x86_64 -isysroot /Applications/Xcode10.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk -mmacosx-version-min=10.12 -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -Wextra -Winconsistent-missing-override -Wobjc-interface-ivars -Wobjc-method-access -Wobjc-multiple-method-names -Werror=unguarded-availability -Werror=unguarded-availability-new -Werror=unsupported-availability-guard -fPIC -DQT_DEPRECATED_WARNINGS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_PLUGIN -DQT_LOCATION_LIB -DQT_POSITIONINGQUICK_LIB -DQT_POSITIONING_LIB -DQT_QUICK_LIB -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_SQL_LIB -DQT_CORE_LIB -I. -I../../../3rdparty/mapbox-gl-native/platform/qt/include -I../../../../include/QtLocation/5.14.0 -I../../../../include/QtLocation/5.14.0/QtLocation -I../../../../include/QtPositioningQuick/5.14.0 -I../../../../include/QtPositioningQuick/5.14.0/QtPositioningQuick -I../../../../include/QtPositioning/5.14.0 -I../../../../include/QtPositioning/5.14.0/QtPositioning -I../../../../include -I../../../../include/QtLocation -I../../../../include/QtPositioningQuick -I../../../../include/QtPositioning -I/Users/qt/work/install/lib/QtQuick.framework/Headers/5.14.0 -I/Users/qt/work/install/lib/QtQuick.framework/Headers/5.14.0/QtQuick -I/Users/qt/work/install/lib/QtGui.framework/Headers/5.14.0 -I/Users/qt/work/install/lib/QtGui.framework/Headers/5.14.0/QtGui -I/Users/qt/work/install/lib/QtQuick.framework/Headers -I/Users/qt/work/install/lib/QtGui.framework/Headers -I/Users/qt/work/install/lib/QtQmlModels.framework/Headers/5.14.0 -I/Users/qt/work/install/lib/QtQmlModels.framework/Headers/5.14.0/QtQmlModels -I/Users/qt/work/install/lib/QtQml.framework/Headers/5.14.0 -I/Users/qt/work/install/lib/QtQml.framework/Headers/5.14.0/QtQml -I/Users/qt/work/install/lib/QtCore.framework/Headers/5.14.0 -I/Users/qt/work/install/lib/QtCore.framework/Headers/5.14.0/QtCore -I/Users/qt/work/install/lib/QtQmlModels.framework/Headers -I/Users/qt/work/install/lib/QtQml.framework/Headers -I/Users/qt/work/install/lib/QtNetwork.framework/Headers -I/Users/qt/work/install/lib/QtSql.framework/Headers -I/Users/qt/work/install/lib/QtCore.framework/Headers -I.moc/release/release -I/Applications/Xcode10.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/System/Library/Frameworks/OpenGL.framework/Headers -I/Applications/Xcode10.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/System/Library/Frameworks/AGL.framework/Headers -I/usr/local/opt/openssl/include -I/Users/qt/work/install/mkspecs/macx-clang -F/Users/qt/work/qt/qtlocation/lib -F/Users/qt/work/install/lib -o .obj/release/release/moc_qgeomapmapboxgl.o .moc/release/release/moc_qgeomapmapboxgl.cpp agent:2019/07/05 07:42:33 build.go:207: qsgmapboxglnode.cpp:70:5: error: unknown type name 'QSGPlainTexture' agent:2019/07/05 07:42:33 build.go:207: QSGPlainTexture *fboTexture = static_cast<QSGPlainTexture *>(texture()); agent:2019/07/05 07:42:33 build.go:207: ^ agent:2019/07/05 07:42:33 build.go:207: qsgmapboxglnode.cpp:70:47: error: unknown type name 'QSGPlainTexture' agent:2019/07/05 07:42:33 build.go:207: QSGPlainTexture *fboTexture = static_cast<QSGPlainTexture *>(texture()); agent:2019/07/05 07:42:33 build.go:207: ^ agent:2019/07/05 07:42:33 build.go:207: qsgmapboxglnode.cpp:72:26: error: unknown type name 'QSGPlainTexture' agent:2019/07/05 07:42:33 build.go:207: fboTexture = new QSGPlainTexture; agent:2019/07/05 07:42:33 build.go:207: ^ agent:2019/07/05 07:42:34 build.go:207: 3 errors generated. agent:2019/07/05 07:42:34 build.go:207: make[5]: *** [.obj/release/release/qsgmapboxglnode.o] Error 1 agent:2019/07/05 07:42:34 build.go:207: make[5]: *** Waiting for unfinished jobs....