Add correct header for QSGPlainTexture

Guard with QT_HAS_INCLUDE, because the header isn't there, yet, but
adding it is blocked by the missing include here.

Task-number: QTBUG-76928
Change-Id: Iaa4e67a73662de26b600207852e4668762cf5d96
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>